# BeeRL

./: main.py  pyproject.toml
.github/workflows/: ci.yml
src/: coverage_grid.py  swarm_env.py
src/swarm/: swarm.py  swarm_unit.py
tests/: coverage_grid_test.py  swarm_env_test.py
tests/swam/: swarm_test.py  swarm_unit_test.py
