[project]
name = "beerl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gym>=0.26.2",
    "gymnasium>=1.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "stable-baselines3>=2.7.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
